# labello

./: .gitignore  .mailmap  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt  requirements_docker.txt
src/: config.local.skel  config.yaml  entrypoint.sh  labello.py  package.json
src/app/: __init__.py  fonts.py  halftone.py  label.py  web.py
src/app/static/css/: labello.css
src/app/static/favicons/: site.webmanifest
src/app/templates/: base.jinja2  main.jinja2  main.js
src/labello/: __init__.py  fonts.py  label.py  web.py
src/labello/templates/: base.jinja2  main.jinja2  main.js
