[tool.poetry]
name = "labello"
version = "0.2.1"
description = "A webinterface to print labels"
authors = ["telegnom <max@telegnom.org>"]
license = "MIT"
include = ["labello/*", "labello/node_modules/@mdi/font/*"]

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^2.1.1"
Pillow = "^9.1.0"
Flask-Bootstrap4 = "^4.0.2"
qrcode = "^7.3.1"
PyYAML = "^6.0"
brother-ql = "^0.9.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
